--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -4,20 +4,24 @@
   background-color: $color-primary;
   height: 50px;
 
-  @include tablet {
+  @include desktop {
+    align-items: center;
     display: flex;
     height: 70px;
+    justify-content: space-between;
+    padding-left: 12px;
+    padding-right: 46px;
     }
   }
 
 .menu-toggle {
   background-color: $color-primary;
   border: none;
-  float: right;
   height: 20px;
-  margin-right: 16px;
-  margin-top: 4px;
   padding-left: 0;
+  position: absolute;
+  right: 16px;
+  top: 16px;
   width: 20px;
 
   &__item {
@@ -52,7 +56,7 @@
   text-decoration: none;
   width: 100%;
 
-  @include tablet {
+  @include desktop {
     display: none;
     }
 
@@ -61,93 +65,22 @@
     font-family: $font-titlebar;
     font-size: $font-size-mobile;
     height: $font-height-mobile;
-    margin-left: 49.5px;
     text-decoration: none;
-    width: 136px;
    }
 }
-
-.main-nav {
-  background: $color-primary;
-  height: 100vh;
-  visibility: hidden;
-  width: 100%;
-
-  @include tablet {
-    align-self: flex-start;
-    display: block;
-    height: 100%;
-    visibility: visible;
-  }
-
-  &--open {
-    display: block;
-    visibility: visible;
-  }
-
-  &__nav-list {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding-top: 70px;
-
-    @include tablet {
-      align-items: flex-start;
-      flex-direction: row;
-      padding-top: 26px;
-      }
-    }
-
-  &__item {
-    color: $color-letter-on-primary;
-    font-family: $font-primary;
-    font-size: $font-size-mobile;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: $font-weight-bold;
-    height: $font-height-mobile;
-    justify-content: center;
-    letter-spacing: normal;
-    line-height: normal;
-    margin-bottom: 43px;
-    text-align: center;
-
-    @include tablet {
-      display: inline;
-      font-size: $font-size-primary;
-      font-weight: $font-weight-bold;
-      margin-left: 30px;
-      }
-
-
-    &--active {
-      background: $color-highlight;
-      border-radius: $default-border-radius;
-      height: inherit;
-      width: inherit;
-    }
-  }
-
-  & a {
-    text-decoration: none;
-    }
-  }
-
 
 .profile {
   display: none;
 
 
-  @include tablet {
+  @include desktop {
     align-items: center;
-    align-self: flex-end;
     background-color: $color-monochrome-1;
     border-radius: 18px;
     display: flex;
     height: 36px;
     justify-content: space-between;
-    margin-bottom: 17px;
-    width: 135px;
+    min-width: 135px;
 
 
     & .logo {
@@ -162,14 +95,15 @@
       width: 32px;
 
     }
+
+    .arrow-down {
+      margin-right: 10px;
+      padding: 15px;
+      position: absolute;
+      right: 0;
+      top: 10;
+
+
   }
 }
-
-.arrow-down {
-  display: none;
-  margin-left: 10px;
-  margin-right: 31px;
-  @include tablet {
-    display: block;
-  }
 }
