--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -130,3 +130,6 @@ $default-margin-desktop: 206px;
 /* border */
 $default-border-radius: 4px;
 $default-border-height: 1px;
+// Header-height
+$header-height-mobile: 50px;
+$header-height-desktop: 70px;
