--- a/components/header/header-nav-bar/header-nav-bar.scss
+++ b/components/header/header-nav-bar/header-nav-bar.scss
@@ -18,6 +18,7 @@
     display: block;
     opacity: 1;
     visibility: visible;
+    z-index: 20;
   }
 
   &__nav-list {
@@ -26,6 +27,7 @@
     flex-direction: column;
     height: 100vh;
     margin-top: 70px;
+    z-index: 20;
 
     @include desktop {
       align-items: center;
