--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -2,12 +2,16 @@
 
 .header {
   background-color: $color-primary;
-  height: 50px;
+  height: $header-height-mobile;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 20;
 
   @include desktop {
     align-items: center;
     display: flex;
-    height: 70px;
+    height: $header-height-desktop;
     justify-content: space-between;
     padding-left: 12px;
     padding-right: 46px;
@@ -19,7 +23,7 @@
   border: none;
   height: 20px;
   padding-left: 0;
-  position: absolute;
+  position: fixed;
   right: 16px;
   top: 16px;
   width: 20px;
@@ -36,11 +40,23 @@
 
   &--open {
     .menu-toggle__item {
-      &--open {
+      &-cross {
         display: none;
       }
 
-      &--close {
+      &-hamburger {
+        display: block;
+      }
+    }
+  }
+
+  &--close {
+    .menu-toggle__item {
+      &-hamburger {
+        display: none;
+      }
+
+      &-cross {
         display: block;
       }
     }
