--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -1,11 +1,9 @@
 @import "../../shared/styles/main";
 
 .container {
-  margin-left: $default-margin;
-  margin-right: $default-margin;
+  margin: auto;
+  max-width: 1170px;
+  padding-left: $default-margin;
+  padding-right: $default-margin;
 
-  @include tablet {
-    margin-left: $default-margin-desktop;
-    margin-right: $default-margin-desktop;
-  }
 }
