--- a/shared/styles/_reset.scss
+++ b/shared/styles/_reset.scss
@@ -10,7 +10,6 @@
 }
 
 html,
-body,
 div,
 span,
 applet,
@@ -23,6 +22,20 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite
   margin: 0;
   padding: 0;
   vertical-align: baseline;
+}
+
+body {
+  border: 0;
+  font-size: 100%;
+  font-weight: normal;
+  margin: 0;
+  padding-top: $header-height-mobile;
+  vertical-align: baseline;
+
+  @include desktop {
+    padding-top: $header-height-desktop;
+  }
+
 }
 
 /* HTML5 display-role reset for older browsers */
