--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -1,5 +1,34 @@
 @import "../../shared/styles/main";
 
+.time-entry-overview {
+
+  &__header {
+    display: none;
+
+    @include desktop {
+      align-items: center;
+      border-bottom: solid $default-border-height $color-monochrome-7;
+      display: flex;
+      justify-content: space-between;
+      padding: 17px 20px;
+      width: 100%;
+
+    }
+  }
+
+  &__header-title {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  &__header-search-and-select {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+
 .container {
   margin-left: $default-margin;
   margin-right: $default-margin;
