implement change requests

--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -16,13 +16,13 @@
     }
   }
 
-  &__header-title {
+  &__header-left-side {
     display: flex;
     justify-content: space-between;
 
   }
 
-  &__header-search-and-select {
+  &__header-right-side {
     display: flex;
     justify-content: space-between;
   }
