--- a/components/team-members-overview/team-members-overview.scss
+++ b/components/team-members-overview/team-members-overview.scss
@@ -10,16 +10,16 @@
       justify-content: space-between;
       margin-top: 29px;
     }
+  }
 
-    &-buttons {
-      width: 100%;
+  &__header-buttons {
+    width: 100%;
 
-      @include tablet {
-        align-items: center;
-        display: flex;
-        justify-content: flex-end;
-        width: auto;
-      }
+    @include tablet {
+      align-items: center;
+      display: flex;
+      justify-content: flex-end;
+      width: auto;
     }
   }
 
