--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -10,7 +10,7 @@
       border-bottom: solid $default-border-height $color-monochrome-7;
       display: flex;
       justify-content: space-between;
-      padding: 17px 20px;
+      padding: 17px 30px;
       width: 100%;
 
     }
@@ -22,11 +22,84 @@
 
   }
 
+  &__header-text {
+    padding-right: 12px;
+  }
+
+  &__header-divider {
+    background-color: $color-monochrome-19;
+    height: 14px;
+    margin-top: 4px;
+    width: 1px;
+  }
+
+  &__header-summation {
+    padding-left: 13px;
+  }
+
   &__header-right-side {
     display: flex;
     justify-content: space-between;
   }
+
+  &__select-box-wrapper {
+    position: relative;
+
+    &::after {
+      @include desktop {
+        background: no-repeat url("/static/icons/arrow-down.svg");
+        content: "";
+        height: 5px;
+        margin-left: 36px;
+        position: absolute;
+        right: 17px;
+        top: 17px;
+        width: 11px;
+      }
+    }
+  }
+
+  &__select-employer {
+    -moz-appearance: none; /* Firefox */
+    -webkit-appearance: none; /* Safari and Chrome */
+    appearance: none;
+    display: none;
+    margin-right: 10px;
+
+    @include desktop {
+      align-items: center;
+      background-color: inherit;
+      border: solid $default-border-height $color-monochrome-15;
+      border-radius: $default-border-radius;
+      color: $color-monochrome-18;
+      display: flex;
+      font-size: $font-size-primary;
+      height: 36px;
+      justify-content: center;
+      padding-left: 13px;
+      padding-right: 77px;
+    }
+  }
+
+  &__search {
+    @include desktop {
+      align-items: center;
+      background-color: inherit;
+      border: solid $default-border-height $color-monochrome-15;
+      border-radius: $default-border-radius;
+      color: $color-monochrome-18;
+      display: flex;
+      font-size: $font-size-primary;
+      height: 36px;
+      justify-content: center;
+      padding-left: 13px;
+      padding-right: 110px;
+      width: 100%;
+    }
+  }
 }
+
+
 
 
 .container {
