--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -12,14 +12,12 @@
       justify-content: space-between;
       padding: 17px 30px;
       width: 100%;
-
     }
   }
 
   &__header-left-side {
     display: flex;
     justify-content: space-between;
-
   }
 
   &__header-text {
@@ -42,87 +40,16 @@
     justify-content: space-between;
   }
 
-  &__select-box-wrapper {
-    position: relative;
-
-    &::after {
-      @include desktop {
-        background: no-repeat url("/static/icons/arrow-down.svg");
-        content: "";
-        height: 5px;
-        margin-left: 36px;
-        position: absolute;
-        right: 17px;
-        top: 17px;
-        width: 11px;
-      }
-    }
-  }
-
-  &__select-employer {
-    -moz-appearance: none; /* Firefox */
-    -webkit-appearance: none; /* Safari and Chrome */
-    appearance: none;
-    display: none;
-    margin-right: 10px;
-
-    @include desktop {
-      align-items: center;
-      background-color: inherit;
-      border: solid $default-border-height $color-monochrome-15;
-      border-radius: $default-border-radius;
-      color: $color-monochrome-18;
-      display: flex;
-      font-size: $font-size-primary;
-      height: 36px;
-      justify-content: center;
-      padding-left: 13px;
-      padding-right: 77px;
-    }
-  }
-
-  &__search-wrapper {
-    position: relative;
-
-    &::after {
-      @include desktop {
-        background: no-repeat url("/static/icons/magnifying-glass.svg");
-        content: "";
-        height: 16px;
-        margin-left: 36px;
-        position: absolute;
-        right: 14px;
-        top: 10px;
-        width: 16px;
-      }
-    }
-  }
-
-  &__search {
-    @include desktop {
-      align-items: center;
-      background-color: inherit;
-      border: solid $default-border-height $color-monochrome-15;
-      border-radius: $default-border-radius;
-      color: $color-monochrome-18;
-      display: flex;
-      font-size: $font-size-primary;
-      height: 36px;
-      justify-content: center;
-      padding-left: 13px;
-      padding-right: 110px;
-      width: 100%;
-    }
-  }
-
   &__page-title {
+    display: none;
     font-size: 24px;
     margin-top: 33px;
+
+    @include desktop {
+      display: block;
+    }
   }
 }
-
-
-
 
 .container {
   font-family: $font-primary;
@@ -130,5 +57,4 @@
   max-width: 1170px;
   padding-left: $default-margin;
   padding-right: $default-margin;
-
 }
