--- a/shared/components/search-field/search-field.scss
+++ b/shared/components/search-field/search-field.scss
@@ -27,6 +27,7 @@
       font-size: $font-size-primary;
       height: 36px;
       justify-content: center;
+      margin-right: 10px;
       padding-left: 13px;
       padding-right: 110px;
       width: 100%;
