make form input generic and fix bugs with SelectBox

--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -82,6 +82,7 @@
 }
 
 .profile {
+  border: none;
   display: none;
 
 
@@ -103,7 +104,7 @@
     & .picture {
       border-radius: 18px;
       height: 32px;
-      margin-left:  18px;
+      margin-left:  19px;
       width: 32px;
 
     }
