--- a/shared/components/page-header/page-header.scss
+++ b/shared/components/page-header/page-header.scss
@@ -16,7 +16,7 @@
   &__section {
     align-items: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   &__divider {
