--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -68,6 +68,7 @@ $timesheet-form-button-color: #35ac45;
 $xs: (max-width: 599px);
 $gt-xs: (min-width: 600px);
 $sm: (min-width: 600px) and (max-width: 959px);
+$max-sm: (max-width: 959px);
 $gt-sm: (min-width: 960px);
 $md: (min-width: 960px) and (max-width: 1279px);
 $gt-md: (min-width: 1280px);
