--- a/shared/components/search-field/search-field.scss
+++ b/shared/components/search-field/search-field.scss
@@ -28,9 +28,7 @@
       height: 36px;
       justify-content: center;
       margin-right: 10px;
-      padding-left: 13px;
-      padding-right: 110px;
-      width: 100%;
+      padding: 9px 110px 9px 13px;
     }
   }
 }
