--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -25,7 +25,7 @@
   position: absolute;
   right: 16px;
   top: 50%;
-  transform: (0, -50%);
+  transform: translate(0, -50%);
   width: 20px;
 
   &__item {
