--- a/components/header/header-nav-bar/header-nav-bar.scss
+++ b/components/header/header-nav-bar/header-nav-bar.scss
@@ -26,8 +26,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    margin-top: 70px;
-    z-index: 20;
+    padding-top: 70px;
 
     @include desktop {
       align-items: center;
@@ -45,7 +44,6 @@
     font-weight: $font-weight-light;
     height: $font-height-mobile;
     margin-bottom: 43px;
-    margin-right: 14px;
     padding: 0 18px 18px;
 
     @include desktop {
@@ -62,8 +60,12 @@
     }
   }
 
-  & a {
+  &__link {
     text-decoration: none;
+
+    &:link {
+      color: $color-monochrome-1;
+    }
 
     &:visited {
       color: $color-monochrome-1;
