--- a/components/time-entry-form/time-entry-form.scss
+++ b/components/time-entry-form/time-entry-form.scss
@@ -43,9 +43,7 @@
 }
 
 .form-container {
-  margin-left: $default-margin;
-  margin-right: $default-margin;
-  padding: 16px;
+  padding: 0 16px 32px;
   width: 100%;
 
   @include desktop {
@@ -56,6 +54,19 @@
 
   }
 }
+
+.time-entry-form {
+  display: flex;
+  flex-direction: column;
+
+  @include desktop {
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 75%;
+  }
+}
+
 
 .form {
   background-color: $color-monochrome-8;
@@ -99,20 +110,6 @@
     }
   }
 
-  &__input {
-    background-image: linear-gradient(to top, $color-monochrome-16, $color-monochrome-1);
-    border: solid $default-border-height $color-monochrome-15;
-    border-radius: $default-border-radius;
-    font-size: $font-size-primary;
-    height: 36px;
-    margin-top: 12px;
-    width: 100%;
-
-    &:invalid,
-    &--invalid {
-      border: solid $default-border-height $color-monochrome-17;
-    }
-  }
 
   &__list-item {
     font-size: $font-size-primary;
@@ -150,17 +147,6 @@
   }
 }
 
-.time-entry-form {
-  display: flex;
-  flex-direction: column;
-
-  @include desktop {
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 75%;
-  }
-}
 
 .first-row {
   align-items: center;
