--- a/shared/components/select-box/select-box.scss
+++ b/shared/components/select-box/select-box.scss
@@ -3,16 +3,29 @@
 .select-box {
   position: relative;
 
+  @include desktop {
+    margin-right: 10px;
+  }
+
   &::after {
     @include desktop {
       background: no-repeat url("/static/icons/arrow-down.svg");
       content: "";
       height: 5px;
       margin-left: 36px;
+      pointer-events: none;
       position: absolute;
       right: 17px;
       top: 17px;
       width: 11px;
+    }
+  }
+
+  &--form {
+    margin-top: 12px;
+
+    @include desktop {
+      margin-right: 0;
     }
   }
 
@@ -31,7 +44,10 @@
     display: flex;
     font-size: $font-size-primary;
     justify-content: center;
-    margin-right: 10px;
     padding: 9px 79px 9px 15px;
+
+    &--form {
+      background-color: $color-monochrome-1;
+    }
   }
 }
